bottom section of landing page

--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,33 @@
       <div class="col twelve solid-horizontal-rope">
 
         <div class="row sub-heading-row">
-          <div class="col three about-sub-heading animated swing">
-            <p class='vertical-titles animated swing'> About </p>
-            <div class='ball animated swing'>O</div>
+          <div class="col three sub-heading about animated swing">
+            <p class='vertical-titles about animated swing'> About </p>
+            <div class='ball o animated swing'>O</div>
           </div>
-          <div class="col three sub-heading animated swing">
-            <p class='vertical-titles animated swing'> Resume </p>
-            <div class='ball animated swing'>M</div>
+
+          <div class="col three sub-heading resume animated swing">
+            <p class='vertical-titles resume animated swing'> Resume </p>
+            <div class='ball m animated  swing'>M</div>
+          </div>
+
+          <div class="col three sub-heading projects animated swing">
+            <p class='vertical-titles projects animated swing'> Git & Projects </p>
+            <div class='ball a animated  swing'>A</div>
+          </div>
+
+          <div class="col three sub-heading social animated swing">
+            <p class='vertical-titles social animated swing'> Social Skills </p>
+            <div class='ball r animated  swing'>R</div>
           </div>
         </div>
 
+      </div>
+    </div>
 
-
+    <div class="row spacing-row">
+      <div class="col four">
+        <p id='homepage-title'> Omar Ahmad's Portfolio </p>
       </div>
     </div>
 
