done with landing page for now

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
     <title>Omar's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Source+Sans+Pro" rel="stylesheet">
   <body>
     <div class="row">
       <div class="col twelve">
@@ -24,7 +23,7 @@
           </div>
 
           <div class="col three sub-heading resume animated swing">
-            <p class='vertical-titles resume animated swing'> Resume </p>
+            <p class='vertical-titles resume animated swing'> Resume & Skills </p>
             <div class='ball m animated  swing'>M</div>
           </div>
 
@@ -46,6 +45,36 @@
       <div class="col four">
         <p id='homepage-title'> Omar Ahmad's Portfolio </p>
       </div>
+      <div class='col three'></div>
+      <div class='col one'>
+        <a href="mailto:theomar3@gmail.com">
+          <img src="/images/gmail.png" width='50'/>
+        </a>
+      </div>
+      <div class='col one'>
+        <a href="https://github.com/theomar3">
+          <img src="/images/github.png" />
+        </a>
+      </div>
+      <div class='col one'>
+        <a href="https://www.linkedin.com/pub/omar-ahmad/1a/2b2/b08" style="text-decoration:none;">
+          <span style="font: 80% Arial,sans-serif; color:#0783B6;">
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="40" alt="View Omar Ahmad's LinkedIn profile" style="vertical-align:middle;" border="0">
+          </span>
+        </a>
+      </div>
+      <div class='col one'>
+        <a href="https://teachertocoder.wordpress.com/">
+          <img src="/images/wordpress.png" width='40' />
+        </a>
+      </div>
+      <div class='col one'>
+        <a href="#">  <!--This link coming soon-->
+          <img src="/images/youtube.png" width='70'/>
+        </a>
+      </div>
+
+
     </div>
 
 
