working on About page

--- a/public/about.html
+++ b/public/about.html
@@ -4,11 +4,50 @@
     <meta charset="utf-8">
     <title>About</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
+
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
+
   </head>
-  <body>
-    <h1>About</h1>
+  <body id='about-background'>
+    <div class="row">
+      <div class='col four'></div>
 
+      <div class="col eight about-section">
+          <div class="left about-title-subsection">
+            <h1>ABOUT ME</h1>
+          </div>
+          <div class="right my-pic-subsection" >
+            <img class='my-pic'src="/images/omar3.jpg"  />
+          </div>
+          <div class="left adjective-list-1">
+            <h1>Coder</h1>
+            <h1>Developer</h1>
+            <h1>Teacher</h1>
+          </div>
+          <div class="right"></div>
+          <div class="left adjective-list-2">
+            <h1>Game of Throner</h1>
+            <h1>Reader</h1>
+            <h1>Knowledge Seeker</h1>
+          </div>
+          <div class="right adjective-list-3">
+            <h1>Swimmer</h1>
+            <h1>Gymer</h1>
+            <h1>Basketball Watcher</h1>
+          </div>
+          <div class="left adjective-list-4">
+            <h1>World Traveler</h1>
+            <h1>Foodie Eater</h1>
+            <h1>Lover not a Fighter</h1>
+          </div>
+          <div class="right about-section-back-button">
+            <a href="index.html">
+              <h1 class='about-home-link'>Home</h1>
+            </a>
+          </div>
 
+      </div>
 
+    </div>
   </body>
 </html>
