--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Source+Sans+Pro" rel="stylesheet">
   <body>
     <div class="row">
-      <div class="col twelve">
-
-      </div>
+      <div class="col twelve"></div>
     </div>
 
     <div class="row">
@@ -41,7 +39,7 @@
       </div>
     </div>
 
-    <div class="row spacing-row">
+    <div class="row title-and-social-row">
       <div class="col four">
         <p id='homepage-title'> Omar Ahmad's Portfolio </p>
       </div>
