fixing up About section

--- a/public/about.html
+++ b/public/about.html
@@ -17,7 +17,7 @@
             <h1>ABOUT ME</h1>
           </div>
           <div class="right my-pic-subsection" >
-            <img class='my-pic'src="/images/omar3.jpg"  />
+            <img class='my-pic'src="/images/omar.jpg"  />
           </div>
           <div class="left adjective-list-1">
             <h1>Coder</h1>
@@ -43,11 +43,16 @@
           <div class="right about-section-back-button">
             <a href="index.html">
               <h1 class='about-home-link'>Home</h1>
+              <img class='home-icon'src="/images/home-icon.png"  />
             </a>
           </div>
 
       </div>
 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script src='about.js'></script>
+
   </body>
 </html>
