--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,6 @@
 
 
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src='portfolio.js'></script>
+    <script src='index.js'></script>
   </body>
 </html>
