ready to make it responsive

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="col three sub-heading social animated swing">
-            <p class='vertical-titles social animated swing'> Social Skills </p>
+            <p class='vertical-titles social animated swing'> Connect </p>
             <div class='ball r animated  swing'>R</div>
           </div>
         </div>
@@ -67,7 +67,7 @@
         </a>
       </div>
       <div class='col one'>
-        <a href="#">  <!--This link coming soon-->
+        <a href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">  <!--This link coming soon-->
           <img src="/images/youtube.png" width='70'/>
         </a>
       </div>
