--- a/public/projects.html
+++ b/public/projects.html
@@ -4,8 +4,48 @@
     <meta charset="utf-8">
     <title>Projects</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
   <body id=projects-background>
+    <div class='row'>
+      <div class='col four'></div>
+
+      <div class="col eight projects-section">
+          <div class="left projects-title-subsection">
+            <h1>Git & Projects</h1>
+          </div>
+          <div class="right git-link-subsection" >
+            <a href="https://github.com/theomar3">
+              <h1 class='my-git-text'>My Git Page</h1>
+            </a>
+          </div>
+          <div class="left dfw-code-camp-subsection">
+            <a href="http://dfwcodecamp.com/">
+              <h1 class='code-camp-text'>DFW Free Code Camp website</h1>
+            </a>
+          </div>
+          <div class="right type-fight-subsection">
+            <a href="https://type-fight.herokuapp.com/">
+              <h1 class='typefight-text'>TypeFight</h1>
+            </a>
+          </div>
+          <div class="left getpunch-subsection ">
+            <a href="#"> <!--link coming soon, Do JS stuff when it comes-->
+              <h1>GetPunch</h1>
+            </a>
+          </div>
+          <div class="right back-button-section">
+            <a href="index.html">
+              <h1 class='projects-home-text'>Home</h1>
+            </a>
+          </div>
+
+      </div>
+
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script src='pages.js'></script>
   </body>
 </html>
