--- a/public/resume.html
+++ b/public/resume.html
@@ -4,9 +4,47 @@
     <meta charset="utf-8">
     <title>Resume</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
   <body id='resume-background'>
-    <h1>Resume & Skills</h1>
+    <div class='row'>
+      <div class='col four'></div>
+
+      <div class="col eight resume-section">
+          <div class="left resume-title-subsection">
+            <h1>RESUME & SKILLS</h1>
+          </div>
+          <div class="right resume-download-subsection" >
+            <h1>Resume Download (PDF)</h1>
+          </div>
+          <div class="left skill-set-1">
+            <h1>HTML</h1>
+            <h1>CSS</h1>
+            <h1>SASS</h1>
+          </div>
+          <div class="right skill-set-2">
+            <h1>Javascript</h1>
+            <h1>jQuery</h1>
+            <h1>React</h1>
+          </div>
+          <div class="left skill-set-3 ">
+            <h1>Lodash</h1>
+            <h1>REST APIs</h1>
+            <h1>JSON</h1>
+          </div>
+          <div class="right back-button-section">
+            <a href="index.html">
+              <h1 class='resume-home-text'>Home</h1>
+            </a>
+          </div>
+
+      </div>
+
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script src='pages.js'></script>
+
   </body>
 </html>
