--- a/public/social.html
+++ b/public/social.html
@@ -4,8 +4,48 @@
     <meta charset="utf-8">
     <title>Social Skills</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
   <body id='social-background'>
+    <div class='row'>
+      <div class='col four'></div>
+
+      <div class="col eight social-section">
+          <div class="left social-title-subsection">
+            <h1>Connect With Me</h1>
+          </div>
+          <div class="right youtube-link-subsection" >
+            <a href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
+              <h1 class='my-youtube-text'>My YouTube Channel</h1>
+            </a>
+          </div>
+          <div class="left blog-subsection">
+            <a href="https://teachertocoder.wordpress.com/">
+              <h1 class='blog-text'>My Blog</h1>
+            </a>
+          </div>
+          <div class="right linkedin-subsection">
+            <a href="www.linkedin.com/in/omar-ahmad">
+              <h1 class='linkedin-text'>My LinkedIn</h1>
+            </a>
+          </div>
+          <div class="left email-subsection ">
+            <a href="mailto:theomar3@gmail.com">
+              <h1 class='email-me-text'>My Email</h1>
+            </a>
+          </div>
+          <div class="right back-button-section">
+            <a href="index.html">
+              <h1 class='social-home-text'>Home</h1>
+            </a>
+          </div>
+
+      </div>
+
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script src='pages.js'></script>
   </body>
 </html>
