--- a/public/about.html
+++ b/public/about.html
@@ -40,9 +40,9 @@
             <h1>Foodie Eater</h1>
             <h1>Lover not a Fighter</h1>
           </div>
-          <div class="right about-section-back-button">
+          <div class="right back-button-section">
             <a href="index.html">
-              <h1 class='about-home-link'>Home</h1>
+              <h1 class='about-home-text'>Home</h1>
             </a>
           </div>
 
@@ -51,7 +51,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <script src='about.js'></script>
+    <script src='pages.js'></script>
 
   </body>
 </html>
