landing page fixing

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Source+Sans+Pro" rel="stylesheet">
   <body>
     <div class="row">
-      <div class="col twelve"></div>
+      <div class="col twelve">
+        <p id='homepage-title-responsive'> Omar Ahmad's Portfolio </p>
+      </div>
     </div>
 
     <div class="row">
@@ -51,7 +53,7 @@
       </div>
       <div class='col one'>
         <a href="https://github.com/theomar3">
-          <img src="/images/github.png" />
+          <img class='social-media-links' src="/images/github.png" />
         </a>
       </div>
       <div class='col one'>
