changing out sub-pages

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,15 @@
     <title>Omar's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Roboto+Mono|Source+Sans+Pro|Francois One" rel="stylesheet">
   <body>
     <div class="row">
       <div class="col twelve">
-        <p id='homepage-title-responsive'> Omar Ahmad's Portfolio </p>
+        <p id='homepage-title-responsive'>
+          Omar Ahmad's Portfolio
+        </p>
+        <p class='title-one'> Front-End Engineer </p>
+        <p class='title-one'> HTML, CSS, & Javascript </p>
       </div>
     </div>
 
@@ -42,39 +46,31 @@
     </div>
 
     <div class="row title-and-social-row">
-      <div class="col four">
+      <div class="col twelve">
         <p id='homepage-title'> Omar Ahmad's Portfolio </p>
-      </div>
-      <div class='col three'></div>
-      <div class='col one'>
         <a href="mailto:theomar3@gmail.com">
-          <img src="/images/gmail.png" width='50'/>
+          <img class='social-media-links' src="/images/gmail.png"/>
         </a>
-      </div>
-      <div class='col one'>
         <a href="https://github.com/theomar3">
-          <img class='social-media-links' src="/images/github.png" />
+          <img class='social-media-links' src="/images/github-big.png" />
         </a>
-      </div>
-      <div class='col one'>
         <a href="https://www.linkedin.com/pub/omar-ahmad/1a/2b2/b08" style="text-decoration:none;">
-          <span style="font: 80% Arial,sans-serif; color:#0783B6;">
-          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="40" alt="View Omar Ahmad's LinkedIn profile" style="vertical-align:middle;" border="0">
-          </span>
+          <img class='social-media-links' src="/images/linkedin-logo.png" />
         </a>
-      </div>
-      <div class='col one'>
         <a href="https://teachertocoder.wordpress.com/">
-          <img src="/images/wordpress.png" width='40' />
+          <img class='social-media-links' src="/images/wordpress.png" />
+        </a>
+        <a href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
+          <img class='social-media-links' src="/images/youtube-logo.png"/>
         </a>
       </div>
-      <div class='col one'>
-        <a href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">  <!--This link coming soon-->
-          <img src="/images/youtube.png" width='70'/>
-        </a>
+    </div>
+
+    <div class="row small-about-row">
+      <div class="col twelve">
+        <p> Front-End Engineer </p>
+        <p> HTML, CSS, & Javascript </p>
       </div>
-
-
     </div>
 
 
