fixing resume page

--- a/public/about.html
+++ b/public/about.html
@@ -8,47 +8,60 @@
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
 
   </head>
-  <body id='about-background'>
+  <body>
     <div class="row">
-      <div class='col four'></div>
+      <div class='col twelve main-grid'>
 
-      <div class="col eight about-section">
-          <div class="left about-title-subsection">
-            <h1>ABOUT ME</h1>
-          </div>
-          <div class="right my-pic-subsection" >
+        <div class="row my-pic-row">
+          <div class="col three"></div>
+          <div class='col six'>
             <img class='my-pic'src="/images/omar.jpg"  />
           </div>
-          <div class="left adjective-list-1">
+          <div class="col three"></div>
+        </div>
+
+        <div class="row about-title-row">
+          <div class="col twelve">
+            <h1>ABOUT ME</h1>
+          </div>
+        </div>
+
+        <div class="row adjective-row">
+          <div class="col six adjective-list-1">
             <h1>Coder</h1>
             <h1>Developer</h1>
             <h1>Teacher</h1>
           </div>
-          <div class="right"></div>
-          <div class="left adjective-list-2">
+          <div class="col six adjective-list-2">
             <h1>Game of Throner</h1>
             <h1>Reader</h1>
             <h1>Knowledge Seeker</h1>
           </div>
-          <div class="right adjective-list-3">
+        </div>
+
+        <div class="row adjective-row">
+          <div class="col six adjective-list-3">
             <h1>Swimmer</h1>
             <h1>Gymer</h1>
             <h1>Basketball Watcher</h1>
           </div>
-          <div class="left adjective-list-4">
+          <div class="col six adjective-list-4">
             <h1>World Traveler</h1>
             <h1>Foodie Eater</h1>
             <h1>Lover not a Fighter</h1>
           </div>
-          <div class="right back-button-section">
+        </div>
+
+        <div class="row back-button-row">
+          <div class="col twelve">
             <a href="index.html">
               <h1 class='about-home-text'>Home</h1>
             </a>
           </div>
+        </div>
 
       </div>
 
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
     <script src='pages.js'></script>
