--- a/public/resume.html
+++ b/public/resume.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
-  <body id='resume-background'>
+  <body>
     <div class='row'>
       <div class='col four'></div>
 
