fixing projects page

--- a/public/resume.html
+++ b/public/resume.html
@@ -7,40 +7,48 @@
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
   <body>
-    <div class='row'>
-      <div class='col four'></div>
+    <div class="row">
+      <div class='col twelve main-grid'>
 
-      <div class="col eight resume-section">
-          <div class="left resume-title-subsection">
-            <h1>RESUME & SKILLS</h1>
+        <div class="row resume title-row">
+          <div class="col twelve">
+            <h1 class='title'>RESUME & SKILLS</h1>
+            <h1 class='resume-download'>Resume Download (PDF)</h1>
           </div>
-          <div class="right resume-download-subsection" >
-            <h1>Resume Download (PDF)</h1>
-          </div>
-          <div class="left skill-set-1">
+        </div>
+
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-1">
             <h1>HTML</h1>
             <h1>CSS</h1>
-            <h1>SASS</h1>
           </div>
-          <div class="right skill-set-2">
+          <div class="col six list-2">
             <h1>Javascript</h1>
             <h1>jQuery</h1>
-            <h1>React</h1>
           </div>
-          <div class="left skill-set-3 ">
+        </div>
+
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-3">
+            <h1>React</h1>
             <h1>Lodash</h1>
+          </div>
+          <div class="col six list-4">
             <h1>REST APIs</h1>
             <h1>JSON</h1>
           </div>
-          <div class="right back-button-section">
+        </div>
+
+        <div class="row back-button-row">
+          <div class="col twelve">
             <a href="index.html">
               <h1 class='resume-home-text'>Home</h1>
             </a>
           </div>
+        </div>
 
       </div>
 
-    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
