--- a/public/about.html
+++ b/public/about.html
@@ -20,32 +20,32 @@
           <div class="col three"></div>
         </div>
 
-        <div class="row about-title-row">
+        <div class="row title-row">
           <div class="col twelve">
-            <h1>ABOUT ME</h1>
+            <h1 class='title'>ABOUT ME</h1>
           </div>
         </div>
 
-        <div class="row adjective-row">
-          <div class="col six adjective-list-1">
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-1">
             <h1>Coder</h1>
             <h1>Developer</h1>
             <h1>Teacher</h1>
           </div>
-          <div class="col six adjective-list-2">
+          <div class="col six list-2">
             <h1>Game of Throner</h1>
             <h1>Reader</h1>
             <h1>Knowledge Seeker</h1>
           </div>
         </div>
 
-        <div class="row adjective-row">
-          <div class="col six adjective-list-3">
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-3">
             <h1>Swimmer</h1>
             <h1>Gymer</h1>
             <h1>Basketball Watcher</h1>
           </div>
-          <div class="col six adjective-list-4">
+          <div class="col six list-4">
             <h1>World Traveler</h1>
             <h1>Foodie Eater</h1>
             <h1>Lover not a Fighter</h1>
