--- a/public/projects.html
+++ b/public/projects.html
@@ -6,23 +6,55 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
-  <body id=projects-background>
-    <div class='row'>
-      <div class='col four'></div>
+  <body>
 
-      <div class="col eight projects-section">
-          <div class="left projects-title-subsection">
-            <h1>Git & Projects</h1>
+    <div class="row">
+      <div class='col twelve main-grid'>
+
+        <div class="row title-row">
+          <div class="col twelve">
+            <h1 class='title'>GIT & PROJECTS</h1>
           </div>
-          <div class="right git-link-subsection" >
+        </div>
+
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-1">
             <a href="https://github.com/theomar3">
               <h1 class='my-git-text'>My Git Page</h1>
             </a>
           </div>
-          <div class="left dfw-code-camp-subsection">
+          <div class="col six list-2">
             <a href="http://dfwcodecamp.com/">
               <h1 class='code-camp-text'>DFW Free Code Camp website</h1>
             </a>
+          </div>
+        </div>
+
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-3">
+            <h1>React</h1>
+            <h1>Lodash</h1>
+          </div>
+          <div class="col six list-4">
+            <h1>REST APIs</h1>
+            <h1>JSON</h1>
+          </div>
+        </div>
+
+        <div class="row back-button-row">
+          <div class="col twelve">
+            <a href="index.html">
+              <h1 class='projects-home-text'>Home</h1>
+            </a>
+          </div>
+        </div>
+
+      </div>
+
+
+
+    <!-- <div class='row'>
+
           </div>
           <div class="right type-fight-subsection">
             <a href="https://type-fight.herokuapp.com/">
@@ -31,7 +63,7 @@
           </div>
           <div class="left getpunch-subsection ">
             <a href="#"> <!--link coming soon, Do JS stuff when it comes-->
-              <h1>GetPunch</h1>
+              <!-- <h1>GetPunch</h1>
             </a>
           </div>
           <div class="right back-button-section">
@@ -42,7 +74,7 @@
 
       </div>
 
-    </div>
+    </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
