--- a/public/social.html
+++ b/public/social.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
-  <body id='social-background'>
+  <body>
+
+
     <div class='row'>
       <div class='col four'></div>
 
