--- a/public/projects.html
+++ b/public/projects.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Projects</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
+    <link rel="stylesheet" type="text/css" href="sweetalert.css">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
   <body>
@@ -19,12 +20,12 @@
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-1">
-            <a href="https://github.com/theomar3">
+            <a class='github-link' href="https://github.com/theomar3">
               <h1 class='my-git-text'>My Git Page</h1>
             </a>
           </div>
           <div class="col six list-2">
-            <a href="http://dfwcodecamp.com/">
+            <a class='codecamp-link' href="http://dfwcodecamp.com/">
               <h1 class='code-camp-text'>DFW Free Code Camp website</h1>
             </a>
           </div>
@@ -32,12 +33,14 @@
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-3">
-            <h1>React</h1>
-            <h1>Lodash</h1>
+            <a class='typefight-link' href="https://type-fight.herokuapp.com/">
+              <h1 class='typefight-text'>TypeFight</h1>
+            </a>
           </div>
           <div class="col six list-4">
-            <h1>REST APIs</h1>
-            <h1>JSON</h1>
+            <a class='getpunch-link' href="#"> <!--link coming soon, Do JS stuff when it comes-->
+             <h1>GetPunch</h1>
+            </a>
           </div>
         </div>
 
@@ -51,32 +54,8 @@
 
       </div>
 
-
-
-    <!-- <div class='row'>
-
-          </div>
-          <div class="right type-fight-subsection">
-            <a href="https://type-fight.herokuapp.com/">
-              <h1 class='typefight-text'>TypeFight</h1>
-            </a>
-          </div>
-          <div class="left getpunch-subsection ">
-            <a href="#"> <!--link coming soon, Do JS stuff when it comes-->
-              <!-- <h1>GetPunch</h1>
-            </a>
-          </div>
-          <div class="right back-button-section">
-            <a href="index.html">
-              <h1 class='projects-home-text'>Home</h1>
-            </a>
-          </div>
-
-      </div>
-
-    </div> -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="sweetalert.min.js"></script>
 
     <script src='pages.js'></script>
   </body>
