--- a/public/social.html
+++ b/public/social.html
@@ -4,37 +4,57 @@
     <meta charset="utf-8">
     <title>Social Skills</title>
     <link rel="stylesheet" href="style.css" media="screen" title="no title">
+    <link rel="stylesheet" type="text/css" href="sweetalert.css">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Francois+One" rel="stylesheet">
   </head>
   <body>
+    <div class="row">
+      <div class='col twelve main-grid'>
 
-
-    <div class='row'>
-      <div class='col four'></div>
-
-      <div class="col eight social-section">
-          <div class="left social-title-subsection">
-            <h1>Connect With Me</h1>
+        <div class="row title-row">
+          <div class="col twelve">
+            <h1 class='title'>CONNECT WITH ME</h1>
           </div>
-          <div class="right youtube-link-subsection" >
-            <a href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
+        </div>
+
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-1">
+            <a class='youtube-link' href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
               <h1 class='my-youtube-text'>My YouTube Channel</h1>
             </a>
           </div>
-          <div class="left blog-subsection">
-            <a href="https://teachertocoder.wordpress.com/">
+          <div class="col six list-2">
+            <a class='wordpress-link' href="https://teachertocoder.wordpress.com/">
               <h1 class='blog-text'>My Blog</h1>
             </a>
           </div>
-          <div class="right linkedin-subsection">
-            <a href="www.linkedin.com/in/omar-ahmad">
+        </div>
+
+        <div class="row main-row hidden animated fadeInDown">
+          <div class="col six list-3">
+            <a class='linkedin-link' href="https://www.linkedin.com/pub/omar-ahmad/1a/2b2/b08">
               <h1 class='linkedin-text'>My LinkedIn</h1>
             </a>
           </div>
-          <div class="left email-subsection ">
-            <a href="mailto:theomar3@gmail.com">
+          <div class="col six list-4">
+            <a class='email-link' href="mailto:theomar3@gmail.com">
               <h1 class='email-me-text'>My Email</h1>
             </a>
+          </div>
+        </div>
+
+        <div class="row back-button-row">
+          <div class="col twelve">
+            <a href="index.html">
+              <h1 class='social-home-text'>Home</h1>
+            </a>
+          </div>
+        </div>
+
+      </div>
+
+
+    <!-- <div class='row'>
           </div>
           <div class="right back-button-section">
             <a href="index.html">
@@ -44,10 +64,10 @@
 
       </div>
 
-    </div>
+    </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+    <script src="sweetalert.min.js"></script>
     <script src='pages.js'></script>
   </body>
 </html>
