pages are responsive

--- a/public/about.html
+++ b/public/about.html
@@ -48,7 +48,7 @@
           <div class="col six list-4">
             <h1>World Traveler</h1>
             <h1>Foodie Eater</h1>
-            <h1>Lover not a Fighter</h1>
+            <h1>Dreamer</h1>
           </div>
         </div>
 
