--- a/public/projects.html
+++ b/public/projects.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class='col twelve main-grid'>
 
-        <div class="row title-row">
+        <div class="row projects title-row">
           <div class="col twelve">
             <h1 class='title'>GIT & PROJECTS</h1>
           </div>
@@ -24,9 +24,9 @@
               <h1 class='my-git-text'>My Git Page</h1>
             </a>
           </div>
-          <div class="col six list-2">
+          <div class="col six code-camp list-2">
             <a class='codecamp-link' href="http://dfwcodecamp.com/">
-              <h1 class='code-camp-text'>DFW Free Code Camp website</h1>
+              <h1 class='code-camp-text'>DFW Code Camp</h1>
             </a>
           </div>
         </div>
