--- a/public/social.html
+++ b/public/social.html
@@ -11,16 +11,16 @@
     <div class="row">
       <div class='col twelve main-grid'>
 
-        <div class="row title-row">
+        <div class="row connect title-row">
           <div class="col twelve">
-            <h1 class='title'>CONNECT WITH ME</h1>
+            <h1 class='title'>CONNECT</h1>
           </div>
         </div>
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-1">
             <a class='youtube-link' href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
-              <h1 class='my-youtube-text'>My YouTube Channel</h1>
+              <h1 class='my-youtube-text'>My YouTube </h1>
             </a>
           </div>
           <div class="col six list-2">
