added port to heroku

--- a/public/projects.html
+++ b/public/projects.html
@@ -38,8 +38,8 @@
             </a>
           </div>
           <div class="col six list-4">
-            <a class='getpunch-link' href="#"> <!--link coming soon, Do JS stuff when it comes-->
-             <h1>GetPunch</h1>
+            <a class='tuo-link' href="#"> <!--link coming soon, Do JS stuff when it comes-->
+             <h1>TUO</h1>
             </a>
           </div>
         </div>
