target attribute on links

--- a/public/projects.html
+++ b/public/projects.html
@@ -20,7 +20,7 @@
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-1">
-            <a class='github-link' href="https://github.com/theomar3">
+            <a class='github-link' target='_blank' href="https://github.com/theomar3">
               <h1 class='my-git-text'>My Git Page</h1>
             </a>
           </div>
