--- a/public/projects.html
+++ b/public/projects.html
@@ -25,7 +25,7 @@
             </a>
           </div>
           <div class="col six code-camp list-2">
-            <a class='codecamp-link' href="http://dfwcodecamp.com/">
+            <a  class='codecamp-link' target="_blank" href="http://dfwcodecamp.com/">
               <h1 class='code-camp-text'>DFW Code Camp</h1>
             </a>
           </div>
@@ -33,12 +33,12 @@
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-3">
-            <a class='typefight-link' href="https://type-fight.herokuapp.com/">
+            <a  class='typefight-link' target="_blank" href="http://typefight.click">
               <h1 class='typefight-text'>TypeFight</h1>
             </a>
           </div>
           <div class="col six list-4">
-            <a class='tuo-link' href="#"> <!--link coming soon, Do JS stuff when it comes-->
+            <a class='tuo-link' href="#"> <!--link coming soon, Do JS stuff when it comes. And target blank-->
              <h1>TUO</h1>
             </a>
           </div>
