--- a/public/social.html
+++ b/public/social.html
@@ -19,12 +19,12 @@
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-1">
-            <a class='youtube-link' href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
+            <a class='youtube-link' target="_blank" href="https://www.youtube.com/channel/UCd4whVA-5y-VwNg8KnmHTZA">
               <h1 class='my-youtube-text'>My YouTube </h1>
             </a>
           </div>
           <div class="col six list-2">
-            <a class='wordpress-link' href="https://teachertocoder.wordpress.com/">
+            <a class='wordpress-link'  target="_blank" href="https://teachertocoder.wordpress.com/">
               <h1 class='blog-text'>My Blog</h1>
             </a>
           </div>
@@ -32,7 +32,7 @@
 
         <div class="row main-row hidden animated fadeInDown">
           <div class="col six list-3">
-            <a class='linkedin-link' href="https://www.linkedin.com/pub/omar-ahmad/1a/2b2/b08">
+            <a class='linkedin-link'  target="_blank" href="https://www.linkedin.com/pub/omar-ahmad/1a/2b2/b08">
               <h1 class='linkedin-text'>My LinkedIn</h1>
             </a>
           </div>
