got resume on there

--- a/public/resume.html
+++ b/public/resume.html
@@ -13,8 +13,8 @@
         <div class="row resume title-row">
           <div class="col twelve">
             <h1 class='title'>RESUME & SKILLS</h1>
-            <a class='resume-link' target="_blank" href="#">
-              <h1 class='resume-download'>Resume Download (PDF)</h1>
+            <a class='resume-link' target="_blank" href="resume.pdf">
+              <h1 class='resume-download'>View Resume (PDF)</h1>
             </a>
           </div>
         </div>
